[project]
name = "prompt-eng-interactive-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "XuZhanXin",email = "zhanxin.xu@kikitrade.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "langchain[openai] (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
